增加api页面的跳转地址
