# mortnon-web/src/main/java/org/mt/mortnon/web/controller/ApiController.java
@@ -1,0 +1,34 @@
+package org.mt.mortnon.web.controller;
+
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.GetMapping;
+
+/**
+ * api工具
+ *
+ * @date 2021-04-13 22:23:10
+ * @author dongfangzan
+ */
+@Controller
+public class ApiController {
+
+    /**
+     * 跳转到api页面
+     *
+     * @return api页面地址
+     */
+    @GetMapping("/api")
+    public String api() {
+        return "redirect:/api/api.html";
+    }
+
+    /**
+     * 跳转到swagger页面
+     *
+     * @return swagger页面地址
+     */
+    @GetMapping("/swagger")
+    public String swagger() {
+        return "redirect:/swagger-ui-custom.html";
+    }
+}
